<resources>
    <string name="app_name">Solve</string>
    <string name="please_wait">Mohon tunggu . . .</string>
    <string name="something_wrong_title">Terjadi Kesalahan</string>
    <string name="something_wrong_desc">Silahkan coba beberapa saat lagi</string>
    <string name="something_wrong">Terjadi kesalahan, silahkan coba beberapa saat lagi</string>
    <string name="update_title">Pembaruan Tersedia</string>
    <string name="maintenance_title">Sistem Dalam Masa Perbaikan</string>
    <string name="answer_chance_title">Kesempatan Bermain Anda Telah Habis</string>
    <string name="rating_title">Nyaman Dengan Aplikasi Kami?</string>
    <string name="rating_button">Siap Deh!</string>
    <string name="rating_button_cloase">Lain Kali Ya.. </string>
    <string name="rating_desc">Support Kami Dong, Biar Makin Sayang! Jangan Lupa Bintang 5 ya! Love You!!</string>
    <string name="answer_chance_desc">Kesempatan bermain gratis harian Anda telah habis, Tonton iklan untuk dapatkan kesempatan bermain gratis</string>
    <string name="answer_chance_upgrade">Upgrade ke Akun Premium</string>
    <string name="answer_chance_iklan">Tonton Iklan</string>
    <string name="maintenance_desc">Saat ini sistem dalam masa perbaikan untuk versi yang lebih stabil dan pengalaman yang lebih baik</string>
    <string name="update_desc">Perbarui aplikasi untuk versi yang lebih stabil dan pengalaman yang lebih baik</string>
    <string name="update">Perbarui</string>
    <string name="update_later">Perbarui Nanti</string>
    <string name="maintenance_close">Tutup Aplikasi</string>
    <string name="no_internet_title">Tidak Ada Koneksi Internet</string>
    <string name="no_internet_desc">Cek koneksi internetmu dan coba lagi</string>
    <string name="try_again">Coba Lagi</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="phone">Nomor Handphone</string>
    <string name="school">Sekolah</string>
    <string name="empty">Quiz Tidak Tersedia!</string>
    <string name="email_address">Alamat Email</string>
    <string name="password">Password</string>
    <string name="show_password">Show Password</string>
    <string name="forgot_password_u"><u>Lupa Password</u></string>
    <string name="dont_have">Tidak Punya Akun?</string>
    <string name="have">Sudah Punya Akun?</string>
    <string name="sign_up">Daftar</string>
    <string name="username">Username</string>
    <string name="profile_name">Nama Profil</string>
    <string name="name">Nama Profil Anda</string>
    <string name="birth_date">Tanggal Lahir</string>
    <string name="confirm_password">Konfirmasi Password</string>
    <string name="terms_conditions">By clicking Sign Up you agree all the Terms and Conditions.</string>
    <string name="forgot_password">Lupa Password</string>
    <string name="forgot_password_info">Masukan email yang telah terdaftar untuk mengatur ulang kata sandi kamu</string>
    <string name="reset_password">Reset Password</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Username</string>
    <string name="nav_header_subtitle">ruko@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Pengaturan</string>
    <string name="profile">Profil</string>
    <string name="review_answer">Review Jawaban</string>
    <string name="pembahasan_answer">Materi Pembahasan</string>
    <string name="choose_quiz">Pilih Quiz</string>
    <string name="discussion">Pembahasan</string>
    <string name="navigation_quiz">Navigasi Soal</string>
    <string name="done">Selesai</string>
    <string name="home">Beranda</string>
    <string name="account">Akun</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="pembahasan">Pembahasan</string>
    <string name="settings">Pengaturan</string>
    <string name="history">Riwayat</string>
    <string name="no_history">Tidak ada riwayat saat ini</string>
    <string name="profiles">Profil Akun</string>
    <string name="change_password">Ganti Password</string>
    <string name="languages">Bahasa</string>
    <string name="about_us">Tentang Kami</string>
    <string name="logout">Keluar</string>
    <string name="old_password">Password Lama</string>
    <string name="new_password">Password Baru</string>
    <string name="new_confirm_password">Konfirmasi Password Baru</string>
    <string name="confirmation">Konfirmasi</string>
    <string name="are_you_sure_save">Apakah kamu sudah yakin dengan jawabanmu?\nKamu masih bisa mengubah jawabanmu\nselama masih ada sisa waktu</string>
    <string name="are_you_sure_logout">Apakah kamu yakin ingin keluar?</string>
    <string name="are_you_sure_exit">Apakah kamu yakin ingin keluar dari aplikasi?</string>
    <string name="are_you_sure_exit_quiz">Apakah kamu yakin ingin keluar dari quiz?\nSemua pekerjaanmu pada quiz ini akan hilang</string>
    <string name="terms_condition">Syarat dan Ketentuan</string>
    <string name="version">Versi</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="confirm">Konfirmasi</string>
    <string name="ready">Siap?</string>
    <string name="save">Simpan Jawaban</string>
    <string name="konfirmasi_keluar">Apa Anda Yakin ?</string>
    <string name="jawaban">Jawaban Anda Tidak Tersimpan.</string>
    <string name="get_ready">Persiapan</string>
     <string name="chance">Kesempatan Bermain : </string>
     <string name="remainTime">Gratis Kesempatan Bermain Dalam : </string>
    <string name="not_found">Tidak Ditemukan</string>
    <string name="not_found_desc">Tidak ada data yang tersedia untuk saat ini</string>
    <string name="search">Cari Quiz</string>
    <string name="search_desc">Kamu dapat mencari menggunakan kode quiz\nyang telah diberikan</string>
    <string name="code">Kode Quiz</string>
    <string name="your_answer">Jawaban Anda</string>
    <string name="schoolSearch">Cari Nama Sekolah</string>
    <string name="game_desc">Terdapat batasan waktu untuk soal yang akan dikerjakan dan waktu tidak dapat dihentikan saat soal telah diberikan</string>
    <string name="start">Mulai Sekarang</string>
    <string name="correct_answer">Jumlah Pertanyaan Benar</string>
    <string name="total_score">Total Skor</string>
    <string name="value">Nilai</string>
    <string name="score">Skor</string>
    <string name="dari">Dari</string>
    <string name="play_again">Mulai Lagi</string>
    <string name="answer">Pertanyaan</string>
    <string name="question">Soal</string>
    <string name="link">http://185.210.144.115:8080/storage/</string>
    <string name="link2">http://192.168.43.91/master-ruko/ruko/public/storage/</string>
    <string name="descHangeul">Tebak Hangeul ini akan membantumu untuk memahami bentuk dan pelafalan huruf Korea (Hangeul). Dalam permainan ini kamu akan diajak untuk menebak 40 huruf hangeul yang terdiri dari 10 vokal dasar,  11 vokal gabungan,  14 konsonan dasar dan 5 konsonan rangkap.</string>
    <string name="descSukuKata">Tebak Suku Kata ini akan menguji kemampuan kamu dalam merangkai huruf-huruf hangeul dengan menebak gabungan huruf vokal dan konsonan. </string>
    <string name="descKata">Tebak kata ini akan menambah kosa kota koreamu dengan menebak kata
        yang mencangkup kehidupan dasar di Korea,  kehidupan sehari-hari dan hobi, lembaga pemerintahan,
        serba-serbi Korea,  budaya kerja, kehidupan lingkungan kerja,  undang-undang dan aturan dan istilah di tempat kerja.</string>
    <string name="descKalimat">Tebak Kalimat ini akan menguji kemampuanmu dalam merangkai kata-kata yang berkaitan dengan kehidupan dasar Korea,
        Kehidupan sehari-hari dan hobi, lembaga pemerintah, serba-serbi Korea, budaya kerja Korea,
        kehidupan di lingkungan kerja, istilah di tempat kerja Korea,  Undang-undang dan peraturan.</string>
    <string name="descHallyu">Tebak Hallyu ini akan menguji pengetahuanmu tentang Korean Wave (hallyu) dengan menebak kuis tentang K-Pop,
        Sejarah, Ekonomi, Politik, Agama, Wisata,  dan Kata Gaul Korea.</string>

    <string name="descAngka">Tebak angka ini akan  mengajakmu bermain sambil mengenal angka sino Korea dan angka Korea asli.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

</resources>
