<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        app:cardBackgroundColor="@color/colorQuiz"
        app:cardCornerRadius="@dimen/_8sdp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_105sdp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/img_logout" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:text="@string/confirmation"
                android:textColor="@color/white"
                android:textSize="@dimen/_16ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/_6sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginEnd="@dimen/_6sdp"
                android:fontFamily="@font/roboto_light"
                android:gravity="center"
                android:text="@string/are_you_sure_logout"
                android:textAlignment="center"
                android:textColor="@color/white_smoke"
                android:textSize="@dimen/_11ssp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnNo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_weight="0.5"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/no"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13sdp"
                    app:backgroundTint="@color/gray"
                    app:cornerRadius="@dimen/_10sdp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnYes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:layout_weight="0.5"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/yes"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13sdp"
                    app:backgroundTint="@color/colorAccent"
                    app:cornerRadius="@dimen/_10sdp" />

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>