<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbarThumbHorizontal="@null"
        android:scrollbarThumbVertical="@null">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:scrollbarThumbHorizontal="@null"
            android:scrollbarThumbVertical="@null">

            <ImageView
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_160sdp"
                android:src="@drawable/img_search" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/search"
                android:textColor="@color/white"
                android:textSize="@dimen/_25ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/search_desc"
                android:textAlignment="center"
                android:textColor="@color/light_grey"
                android:textSize="@dimen/_12ssp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutSearch"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:hint="@string/code"
                android:textColorHint="@color/white"
                app:boxBackgroundColor="@android:color/transparent"
                app:boxStrokeColor="@color/white"
                app:boxStrokeErrorColor="#CF6679"
                app:boxStrokeWidth="@dimen/_1sdp"
                app:endIconDrawable="@drawable/ic_search"
                app:endIconMode="custom"
                app:endIconTint="@color/white"
                app:errorTextColor="#CF6679"
                app:hintTextColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:textSize="@dimen/_12ssp" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</LinearLayout>